--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,25 @@
-.App {
+h1 {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid__container {
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid__item {
+  padding: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.grid__item--header {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid__item--range-slider {
+  margin-bottom: 10px;
 }
-
-.calculator-controls__container {
-  display: flex;
-  flex-direction: column;
-}
-.calculator-controls__container input {
-  max-width: 400px;
-  margin: auto;
+.grid__item--label {
+  font-style: italic;
+  font-size: .8em;
 }
