Basic payment table added below, shows intervals monthly

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,10 @@ h1 {
   font-style: italic;
   font-size: .8em;
 }
+.paymentsCalculatorTable {
+  width: 100%;
+}
+.paymentsCalculatorTable td {
+  width: 25%;
+  text-align: center;
+}
