--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@ h1 {
 .paymentsCalculatorTable {
   width: 100%;
 }
+.paymentsCalculatorTable td, .paymentsCalculatorTable th {
+  padding: 15px 5px;
+}
+.paymentsCalculatorTable tr:nth-of-type(odd) {
+  background-color: rgba(0,0,0,.05);
+}
 .paymentsCalculatorTable td {
   width: 25%;
   text-align: center;
