--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,14 @@ h1 {
   }
 }
 .graph-container {
+  width: 100%;
   max-width: 800px;
-  margin: auto;
   display: block;
+  margin: auto;
+}
+@media(min-width: 800px) {
+  .graph-container {
+    width: 50%;
+    display: inline-block;
+  }
 }
